Changes in Shorewall 4.4.9

1)  Auto-detection of bridges.

2)  Correct handling of a logical interface name in the EXTERNAL column
    of proxyarp.

3)  More robust 'trace'.

4)  Added IPv6 mDNS macro.

5)  Fix find_first_interface_address() error reporting.

6)  Fix propagation of zero-valued config variables.

7)  Fix OPTIMIZE 4 bug.

Changes in Shorewall 4.4.8

1)  Correct handling of RATE LIMIT on NAT rules.

2)  Don't create a logging chain for rules with '-j RETURN'.

3)  Avoid duplicate SFQ class numbers.

4)  Fix low per-IP rate limits.

5)  Fix Debian init script exit status

6)  Fix NFQUEUE(queue-num) in policy

7)  Implement -s option in install.sh

8)  Add HKP Macro

9)  Fix multiple policy matches with OPTIMIZE 4 and not KLUDGEFREE

10) Eliminate up-cased variable names that aren't documented options.

11) Don't show 'OLD' capabilities if they are not available.

12) Attempt to flag use of '-' as a port-range separator.

13) Add undocumented OPTIMIZE=-1 setting.

14) Replace OPTIMIZE=-1 with undocumented optimize 4096 which DISABLES
    default optimizations.

15) Add support for UDPLITE

16) Distinguish between 'Started' and 'Restored' in ${VARDIR}/state

17) Issue warnings when 'blacklist' but no blacklist file entries.

18) Don't optimize 'blacklst'.

Changes in Shorewall 4.4.7

1)  Backport optimization changes from 4.5.

2)  Backport two new options from 4.5.

3)  Backport TPROXY from 4.5

4)  Add TC_PRIOMAP to shorewall*.conf

5)  Implement LOAD_HELPERS_ONLY

6)  Avoid excessive module loading with LOAD_HELPERS_ONLY=Yes

7)  Fix case where MARK target is unavailable.

8)  Change default to ADD_IP_ALIASES=No

9)  Correct defects in generate_matrix().

10) Fix and optimize 'nosmurfs'.

11) Use 'OLD_HL_MATCH' to suppress use of 'flow' in Simple TC.

Changes in Shorewall 4.4.6

1)  Fix for rp_filter and kernel 2.6.31.

2)  Add a hack to work around a bug in Lenny + xtables-addons

3)  Re-enable SAVE_IPSETS
