@@ -15,6 +15,8 @@ Changes in Shorewall 4.4.9
 
 7)  Fix OPTIMIZE 4 bug.
 
+8)  Deallocate unused rules.
+
 Changes in Shorewall 4.4.8
 
 1)  Correct handling of RATE LIMIT on NAT rules.
